--- a/index.html
+++ b/index.html
@@ -148,9 +148,13 @@
       </main>
       
    </body>
-       <script>
-      feather.replace()
-    </script>
+   <script>
+     feather.replace()
+     
+     if (window.location.host.indexOf('github.io') > -1 && window.location.protocol != "https:"){
+       window.location.protocol = "https";
+     }
+  </script>
 </html>
 <!-- partial -->
   
