--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                </ul>
             </nav>
             <div class="flex flex-col w-full py-6 md:px-0 px-[5vw] text-[#FF8BFF]">
-               <div class="basis-1/2 mt-[20vh] pb-5 xl:p-6 rounded-xl mb-4 overflow-hidden relative">
+               <div class="basis-1/2 mt-[20vh] pb-5 rounded-xl mb-4 overflow-hidden relative">
                   <span class="inline font-medium text-[4.83vw] md:text-3xl tracking-wide p-[.1vw] mb-3 artex">Doubletempo is a management and<br>booking agency representing talents<br>from various genres.</span>
                   <div class="mr-4 mt-2 font-light tracking-wide">
                      <ul>
