--- a/index.html
+++ b/index.html
@@ -2,22 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Doubletempo</title> 
-<script src="https://cdn.tailwindcss.com"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600; 1,300;1,400;1,500&display=swap" rel="stylesheet">
-<script src="https://unpkg.com/feather-icons"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400;500;600&display=swap" rel="stylesheet"> 
-<link href="https://api.fontshare.com/v2/css?f[]=bespoke-serif@400,401,500,501&display=swap" rel="stylesheet"> 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Doubletempo is a management and booking agency based in Tilburg, representing talents from various genres such as tech-house and breakbeat.">
+  <meta name="keywords" content="">
+  <title>DOUBLETEMPO</title> 
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600; 1,300;1,400;1,500&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
