--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Doubletempo is a management and booking agency based in Tilburg, representing talents from various genres such as tech-house and breakbeat.">
+  <meta name="description" content="Doubletempo is a management and booking agency based in Tilburg, representing talents from various genres.">
   <meta name="keywords" content="">
   <title>DOUBLETEMPO</title> 
   <script src="https://cdn.tailwindcss.com"></script>
