--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
                   <li class="text-[#FF8BFF] text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
-                     <a href="#artists" class="artexse">Artists</a>
+                     <a href="#artists" class="artexsem">Artists</a>
                   </li>
                   <li class="text-[#FF8BFF] text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
-                     <a href="#contact" class="artexse">Contact</a>
+                     <a href="#contact" class="artexsem">Contact</a>
                   </li>
                </ul>
             </nav>
