--- a/index.html
+++ b/index.html
@@ -36,31 +36,30 @@
       }
    </style>
    <body class="bg-neutral-50 text-neutral-900">
-      <div class="bg-[#181937]">
+      <div class="bg-neutral-900">
          <div class="shrink w-full max-w-2xl mx-auto">
             <nav class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="sm:pl-1.5 p-0 w-fit block h-fit mr-3 justify-self-start">
-                  <li class="mr-0 text-[#FF8BFF] text-base text-start tracking-wider font-medium inline-block">
+                  <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
                      <span class="artexsem block">Doubletempo</span>
-                     <span class="artexsem block">Agency</span>
                   </li>
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
-                  <li class="text-[#FF8BFF] text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
+                  <li class="text-neutral-100 text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
                      <a href="#artists" class="artexsem">Artists</a>
                   </li>
-                  <li class="text-[#FF8BFF] text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
+                  <li class="text-neutral-100 text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
                      <a href="#contact" class="artexsem">Contact</a>
                   </li>
                </ul>
             </nav>
-            <div class="flex flex-col w-full py-6 md:px-0 px-[5vw] text-[#FF8BFF]">
+            <div class="flex flex-col w-full py-6 md:px-0 px-[5vw] text-neutral-100">
                <div class="basis-1/2 mt-[20vh] pb-5 rounded-xl mb-4 overflow-hidden relative">
                   <span class="inline font-medium text-[4.83vw] md:text-3xl tracking-wide p-[.1vw] mb-3 artex">Doubletempo is a management and<br>booking agency representing talents<br>from various genres.</span>
                   <div class="mr-4 mt-2 font-light tracking-wide">
                      <ul>
                         <li class="mt-4">
-                           <a href="#contact" class="text-dark bg-[#FF8BFF] border-none px-4 py-2.5 artexm font-medium text-start inline-block">Get in touch<i class="inline-block h-full" data-feather="arrow-up-right"></i></a>
+                           <a href="#contact" class="text-neutral-900 bg-neutral-100 border-none px-4 py-2.5 artexm font-medium text-start inline-block">Get in touch<i class="inline-block h-full" data-feather="arrow-up-right"></i></a>
                         </li>
                      </ul>
                   </div>
