--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <div class="sm:basis-1/2 bg-neutral-900">
                      <a href="/artists/eleganto">
                         <div class="h-[60vw] sm:h-[200px] overflow-hidden">
-                           <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="/img/eleganto.jpg">
+                           <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="/img/eleganto.JPG">
                         </div>
                         <div class="py-1 px-2">
                            <span class="text-3xl font-medium artexse text-neutral-50">Eleganto<i class="inline h-full" data-feather="arrow-up-right"></i></span>
