--- a/artists/lefris/index.html
+++ b/artists/lefris/index.html
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
   <meta charset="UTF-8">
-  <title>CodePen - agency/artists/lefris</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doubletempo</title> 
-<script src="https://cdn.tailwindcss.com"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600; 1,300;1,400;1,500&display=swap" rel="stylesheet">
-<script src="https://unpkg.com/feather-icons"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400;500;600&display=swap" rel="stylesheet"> 
-<link href="https://api.fontshare.com/v2/css?f[]=bespoke-serif@400,401,500,501&display=swap" rel="stylesheet"> 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400;500;600&display=swap" rel="stylesheet"> 
+  <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -53,7 +43,7 @@
                </div>
                
                <div class="h-[60vw] sm:h-[300px] overflow-hidden bg-amber-600">
-                  <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="/img/lefris.jpg">
+                  <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="../img/lefris.jpg">
                </div>
             </div>
 
