--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doubletempo</title> 
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400;500;600&display=swap" rel="stylesheet"> 
@@ -19,12 +19,12 @@
             <nav id="nav" class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="sm:pl-1.5 p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
-                     <a href="../index.html"><span class="artexse block">Doubletempo</span></a>
+                     <a href="../../index.html"><span class="artexse block">Doubletempo</span></a>
                   </li>
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
-                     <a href="../index.html#artists" class="artexse">Artists</a>
+                     <a href="../../index.html#artists" class="artexse">Artists</a>
                   </li>
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
                      <a href="#contact" class="artexse">Contact</a>
