--- a/artists/lefris/index.html
+++ b/artists/lefris/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doubletempo</title> 
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400;500;600&display=swap" rel="stylesheet"> 
@@ -19,7 +19,7 @@
             <nav id="nav" class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="sm:pl-1.5 p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
-                     <a href="../index.html"><span class="artexse block">Doubletempo</span></a>
+                     <a href="../../index.html"><span class="artexse block">Doubletempo</span></a>
                   </li>
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
@@ -43,7 +43,7 @@
                </div>
                
                <div class="h-[60vw] sm:h-[300px] overflow-hidden bg-amber-600">
-                  <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="../img/lefris.jpg">
+                  <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="../../img/lefris.jpg">
                </div>
             </div>
 
