--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -43,7 +43,7 @@
                </div>
                
                <div class="h-[60vw] sm:h-[300px] overflow-hidden bg-amber-600">
-                  <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="../img/lefris.jpg">
+                  <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="../../img/zenyte.jpg">
                </div>
             </div>
 
