--- a/artists/lefris/index.html
+++ b/artists/lefris/index.html
@@ -24,7 +24,7 @@
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
-                     <a href="../index.html#artists" class="artexse">Artists</a>
+                     <a href="../../index.html#artists" class="artexse">Artists</a>
                   </li>
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
                      <a href="#contact" class="artexse">Contact</a>
