--- a/artists/eleganto/index.html
+++ b/artists/eleganto/index.html
@@ -19,12 +19,12 @@
             <nav id="nav" class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="sm:pl-1.5 p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
-                     <a href="../../index.html"><span class="artexse block">Doubletempo</span></a>
+                     <a href="../../"><span class="artexse block">Doubletempo</span></a>
                   </li>
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
-                     <a href="../../index.html#artists" class="artexse">Artists</a>
+                     <a href="../../#artists" class="artexse">Artists</a>
                   </li>
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
                      <a href="#contact" class="artexse">Contact</a>
