--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -19,12 +19,12 @@
             <nav id="nav" class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="sm:pl-1.5 p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
-                     <a href="../../index.html"><span class="artexse block">Doubletempo</span></a>
+                     <a href="../../"><span class="artexse block">Doubletempo</span></a>
                   </li>
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
-                     <a href="../../index.html#artists" class="artexse">Artists</a>
+                     <a href="../../#artists" class="artexse">Artists</a>
                   </li>
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mt-1 md:mt-0 md:my-2 md:inline">
                      <a href="#contact" class="artexse">Contact</a>
@@ -42,7 +42,7 @@
                   <p class="inline font-medium text-lg tracking-wide p-[.1vw] mb-3 artex">Dark, club-forward and bass-driven breakbeat with heavy UK influences through a contemporary view.</p>
                </div>
                
-               <div class="h-[60vw] sm:h-[300px] overflow-hidden bg-amber-600">
+               <div class="h-[60vw] sm:h-[400px] overflow-hidden bg-amber-600">
                   <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="../../img/zenyte.jpg">
                </div>
             </div>
