--- a/artists/eleganto/index.html
+++ b/artists/eleganto/index.html
@@ -56,7 +56,7 @@
                <a href="https://soundcloud.com/stmpdrcrds/stmpd-rcrds-radio-039-eleganto?si=3e5311d879b046f68c2df83cdef88bae&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" class="inline font-medium text-xl tracking-wide p-[.1vw] mb-4 artexm underline">STMPD RCRDS Radio 039 - Eleganto</a>
                
                <span class="text-3xl font-medium artexsem">About</span>
-               <p class="inline font-medium text-base tracking-wide p-[.1vw] mb-3 artex">Eleganto is bring a breath of fresh air to the house scene. This hasn't gone unnoticed as many big artists are following his every move closely.
+               <p class="inline font-medium text-base tracking-wide p-[.1vw] mb-3 artex">Eleganto is bringing a breath of fresh air to the house scene. This hasn't gone unnoticed as many big artists are following his every move closely.
 What started of with his EP "Frightening Beasts" and festival weapon "No Stoppin" followed in winning a remix competition for Martin Garrix "Won't Let You Go" cementing his name in the scene.</p>
                
                <p class="inline font-medium text-base tracking-wide p-[.1vw] mb-10 artex">Soon after followed the genre defying singles "Just Tell Me", "Turn It Up" (with Smack) and "One Last Try". These songs display his craftsmanship in composing hard-hitting, next level productions.
