--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@200;300;400;500;600&display=swap" rel="stylesheet"> 
+  <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -144,8 +145,10 @@
             </div>
          </div>
       </div>
+    <script>
+      feather.replace()
+    </script>
    </body>
-  <script src="https://unpkg.com/feather-icons"></script>
 </html>
 <!-- partial -->
 </body>
