--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -56,7 +56,7 @@
                <a href="" class="inline font-medium text-xl tracking-wide p-[.1vw] mb-4 artexm underline">N.A.Radio 13-01-2023</a>
                
                <span class="text-3xl font-medium artexsem">About</span>
-               <p class="inline font-medium text-base tracking-wide p-[.1vw] mb-3 artex">Dutch electronic artist Zenyte is known for his infectious, club-oriented sound, shaped by his love for contemporary breakbeat, 90's UK club music and hyperpop.</p>
+               <p class="inline font-medium text-base tracking-wide p-[.1vw] mb-3 artex">Dutch electronic artist Zenyte is known for his infectious, club-oriented sound, shaped by his love for modern breakbeat, 90's UK club and hyperpop.</p>
                
                <div class="text-xl artexm tracking-wide">
                   <a href="https://www.instagram.com/zenyte_" class="inline artexm mb-4 underline">Instagram</a>
