--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -53,7 +53,7 @@
          <div class="shrink w-full max-w-2xl mx-auto">
             <div id="artists" class="flex flex-col w-full max-w-[100rem] py-6 md:px-0 px-[5vw] pt-10">
                <span class="text-3xl font-medium artexsem">Listen</span>
-               <a href="" class="inline font-medium text-xl tracking-wide p-[.1vw] mb-4 artexm underline">N.A.Radio 13-01-2023</a>
+<a href="https://www.mixcloud.com/NA_Radio/friday-night-take-over-r-newt-lefris-13-1/" class="inline font-medium text-xl tracking-wide p-[.1vw] mb-4 artexm underline">Friday Night Take Over: R-Newt Lefris X Zenyte</a>
                
                <span class="text-3xl font-medium artexsem">About</span>
                <p class="inline font-medium text-base tracking-wide p-[.1vw] mb-3 artex">Dutch electronic artist Zenyte is known for his infectious, club-oriented sound, shaped by his love for modern breakbeat, 90's UK club and hyperpop.</p>
