--- a/artists/lefris/index.html
+++ b/artists/lefris/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doubletempo</title> 
+  <title>Doubletempo - Lefris</title> 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../../css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
