--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav id="nav" class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="sm:pl-1.5 p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
-                    <img class="h-fit" src="/img/logo_wide_transparent.png">
+                    <img class="h-fit" src="/img/logo_wide_website.png">
                   </li>
                </ul>
                <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
