--- a/artists/eleganto/index.html
+++ b/artists/eleganto/index.html
@@ -25,13 +25,13 @@
    <body class="bg-neutral-50 text-neutral-900">
       <div class="bg-neutral-900">
          <div class="shrink w-full max-w-2xl mx-auto">
-            <nav id="nav" class="px-[5vw] md:px-0 pt-5 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
+            <nav id="nav" class="px-[5vw] md:px-0 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
                     <img class="h-20 md:h-16" src="/img/logo_square.png">
                   </li>
                </ul>
-               <ul class="w-fit inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
+               <ul class="w-fit inline-block h-fit mt-5 md:space-x-4 justify-self-start md:justify-self-end">
                   <li class="text-neutral-100 text-base tracking-wider font-medium block mb-1 md:mb-0 md:my-2 md:inline">
                      <a href="../../#artists" class="artexse">Artists</a>
                   </li>
