--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -28,7 +28,9 @@
             <nav id="nav" class="px-[5vw] md:px-0 w-full grid grid-cols-2 text-fuchsia-custom grid justify-items-stretch">
                <ul class="p-0 w-fit block h-fit mr-3 justify-self-start">
                   <li class="mr-0 text-neutral-100 text-base text-start tracking-wider font-medium inline-block">
-                    <img class="h-20 md:h-16" src="/img/logo_square.png">
+                    <a href="../../">
+                      <img class="h-20 md:h-16" src="/img/logo_square.png">
+                    </a>
                   </li>
                </ul>
                <ul class="w-fit mt-5 inline-block h-fit md:space-x-4 justify-self-start md:justify-self-end">
