--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="flex flex-col w-full py-6 md:px-0 px-[5vw] text-neutral-100">
                <div class="basis-1/2 mt-[20vh] pb-5 rounded-xl mb-4 overflow-hidden relative">
-                  <span class="inline font-medium text-[4.3vw] md:text-3xl tracking-wide p-[.1vw] mb-3 artex">Doubletempo is a management agency<br>representing independent talents across<br>various genres.</span>
+                  <span class="inline font-medium text-[4.3vw] md:text-3xl tracking-wide p-[.1vw] mb-3 artex">Doubletempo is a booking agency representing independent talents across various electronic genres.</span>
                   <div class="mr-4 mt-2 font-light tracking-wide">
                      <ul>
                         <li class="mt-4">
