KvK nummer toevoegen

--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
                   <button class="border-none px-4 py-2 text-neutral-50 bg-neutral-900 artexm font-medium w-fit text-center" type="submit">Submit</button>
                </form>
 
+              <span class="sm:text-base text-[4.83vw] text-neutral-700 font-medium artex">KvK-nummer 91597021</span>
+
             </div>
          </div>
       </div>
