--- a/index.html
+++ b/index.html
@@ -88,20 +88,9 @@
                         </div>
                      </a>
                   </div>
-                  
-                     <div class="sm:hidden sm:basis-1/2 bg-neutral-900">
-                        <a href="/artists/zenyte">
-                           <div class="h-[60vw] sm:h-[200px] overflow-hidden">
-                              <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="/img/zenyte.jpg">
-                           </div>
-                           <div class="py-1 px-2">
-                              <span class="text-3xl font-medium artexse text-neutral-50">Zenyte<i class="inline h-full" data-feather="arrow-up-right"></i></span>
-                           </div>
-                        </a>
-                     </div>
                </div> 
     
-               <div class="hidden sm:flex flex flex-col sm:flex-row sm:space-x-3 space-y-3 sm:space-y-0 mt-2">
+               <div class="flex flex-col sm:flex-row sm:space-x-3 space-y-3 sm:space-y-0 mt-2">
                   <div class="sm:basis-1/2 bg-neutral-900">
                      <a href="/artists/mazan">
                         <div class="h-[60vw] sm:h-[200px] overflow-hidden">
