--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                      <div class="basis-1/2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Name*</label>
-                           <input class="px-3 border-none py-2 w-full" type="text" name="name" placeholder="John Doe">
+                           <input class="px-3 border-none py-2 w-full" type="text" name="name">
                         </div>
                      </div>
                      <div class="basis-1/2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Email address*</label>
-                           <input class="px-3 border-none py-2 w-full" type="email" name="email" placeholder="john@doe.com">
+                           <input class="px-3 border-none py-2 w-full" type="email" name="email">
                         </div>
                      </div>
                   </div>
