--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                  method="POST"
                >
                   <div class="flex flex-direction-row space-x-0">
-                     <div class="basis-1/2">
+                     <div class="basis-1/2 mr-2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Name*</label>
                            <input class="px-3 border-none py-2 w-full" type="text" name="name">
@@ -143,7 +143,7 @@
                      </div>
                   </div>
 
-                  <div class="mb-2">
+                  <div class="my-2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Message*</label><br>
                      <textarea class="align-top border-none px-3 py-2 w-full" rows="4" name="message" placeholder="Ask us anything, we'll get back to you ASAP."></textarea>
