--- a/artists/zenyte/index.html
+++ b/artists/zenyte/index.html
@@ -83,27 +83,26 @@
                <span class="text-4xl font-medium artexm">Contact</span>
                
                <span class="sm:text-base text-neutral-700 font-medium artex">Please fill out the form below to get in touch for a project, inquire about a collaboration, enquire about a show or simply say hello.</span>
-
                <form
                  action="https://formspree.io/f/mpzepkoe"
                  method="POST"
                >
                   <div class="flex flex-direction-row space-x-0">
-                     <div class="basis-1/2">
+                     <div class="basis-1/2 mr-2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Name*</label>
-                           <input class="px-3 border-none py-2 w-full" type="text" name="name" placeholder="John Doe">
+                           <input class="px-3 border-none py-2 w-full" type="text" name="name">
                         </div>
                      </div>
                      <div class="basis-1/2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Email address*</label>
-                           <input class="px-3 border-none py-2 w-full" type="email" name="email" placeholder="john@doe.com">
+                           <input class="px-3 border-none py-2 w-full" type="email" name="email">
                         </div>
                      </div>
                   </div>
 
-                  <div class="mb-2">
+                  <div class="my-2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Message*</label><br>
                      <textarea class="align-top border-none px-3 py-2 w-full" rows="4" name="message" placeholder="Ask us anything, we'll get back to you ASAP."></textarea>
