--- a/artists/lefris/index.html
+++ b/artists/lefris/index.html
@@ -91,21 +91,21 @@
                  method="POST"
                >
                   <div class="flex flex-direction-row space-x-0">
-                     <div class="basis-1/2">
+                     <div class="basis-1/2 mr-2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Name*</label>
-                           <input class="px-3 border-none py-2 w-full" type="text" name="name" placeholder="John Doe">
+                           <input class="px-3 border-none py-2 w-full" type="text" name="name">
                         </div>
                      </div>
                      <div class="basis-1/2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Email address*</label>
-                           <input class="px-3 border-none py-2 w-full" type="email" name="email" placeholder="john@doe.com">
+                           <input class="px-3 border-none py-2 w-full" type="email" name="email">
                         </div>
                      </div>
                   </div>
 
-                  <div class="mb-2">
+                  <div class="my-2">
                         <div class="bg-neutral-200">
                            <label class="ml-3 text-neutral-900">Message*</label><br>
                      <textarea class="align-top border-none px-3 py-2 w-full" rows="4" name="message" placeholder="Ask us anything, we'll get back to you ASAP."></textarea>
