--- a/index.html
+++ b/index.html
@@ -114,6 +114,22 @@
                   </div>
                 </div>
               
+               <div class="flex flex-col sm:flex-row sm:space-x-3 space-y-3 sm:space-y-0 mt-2">
+                  <div class="sm:basis-1/2 bg-neutral-900">
+                     <a>
+                        <div class="h-[60vw] sm:h-[200px] overflow-hidden">
+                           <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="/img/mazan.jpg">
+                        </div>
+                        <div class="py-1 px-2">
+                           <span class="text-3xl font-medium artexse text-neutral-50">Zenyte<i class="inline h-full" data-feather="arrow-up-right"></i></span>
+                        </div>
+                     </a>
+                  </div>
+
+                   <div class="sm:basis-1/2 bg-neutral-900">
+                  </div>
+                </div>
+              
             </div>
          </div>
       </div>
