--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                            <img class="object-cover sm:max-h-[336px] w-[100%] min-h-[100%]" src="/img/mazan.jpg">
                         </div>
                         <div class="py-1 px-2">
-                           <span class="text-3xl font-medium artexse text-neutral-50">Mazan<i class="inline h-full" data-feather="arrow-up-right"></i></span>
+                           <span class="text-3xl font-medium artexse text-neutral-50">MAZAN<i class="inline h-full" data-feather="arrow-up-right"></i></span>
                         </div>
                      </a>
                   </div>
